Fix sticker message metadata color in dark mode

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -1196,7 +1196,11 @@ $message-padding-horizontal: 12px;
   user-select: none;
   white-space: nowrap;
 
-  color: light-dark(variables.$color-gray-60, variables.$color-gray-25);
+  &,
+  &--outline-only-bubble,
+  &--sticker {
+    color: light-dark(variables.$color-gray-60, variables.$color-gray-25);
+  }
 
   &--outgoing {
     color: variables.$color-white-alpha-80;
@@ -1204,14 +1208,6 @@ $message-padding-horizontal: 12px;
 
   &--with-image-no-caption {
     color: light-dark(variables.$color-white, variables.$color-white-alpha-80);
-  }
-
-  &--outline-only-bubble {
-    color: light-dark(variables.$color-gray-60, variables.$color-gray-25);
-  }
-
-  &--sticker {
-    color: variables.$color-gray-60;
   }
 
   &--inline {
